Fix rules page overflow, ad nauseam

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@
   --print-margin: 0.25in;
 
   --default-font-size: 12px;
-  --rules-font-size: 9.75px;
+  --rules-font-size: 9.3px;
 }
 
 * {
